[Mac] Fix a DCHECK when right-clicking the reload button.

The reload button has an associated context menu that is only shown if DevTools
is open. The -[ReloadButton setMenuEnabled:] did not disable the menu in the
appropriate way, resulting in a DCHECK.

This change also refactors out a new MenuTestObserver class to assist with
testing NSMenu open/close behavior.

Bug: 733065
Change-Id: I321a640e5e8e85f849dbd1fe64317dba9286a1c8
Reviewed-on: https://chromium-review.googlesource.com/536513
Commit-Queue: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#479808}
Former-commit-id: f7fd12c1dedd498830bc2e9d049687749dbadcf9